fix long creature skin template resrefs
refs #285

--- a/mod/uti/it_creitemdgr.uti.yml
+++ b/mod/uti/it_creitemdgr.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1115560}
+Cost: {type: :dword, value: 1648359}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -20,13 +20,22 @@ LocalizedName:
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: Alter Roter Drache, Eigenschaften
+    0: "Alter Gr\xFCner Drache, Eigenschaften"
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
   value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 0}
+    CostValue: {type: :word, value: 0}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 12}
+    Subtype: {type: :word, value: 33}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -49,11 +58,11 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 25}
-    CostValue: {type: :word, value: 10}
+    CostValue: {type: :word, value: 15}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 24}
+    Subtype: {type: :word, value: 8}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -62,7 +71,7 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 12}
+    Subtype: {type: :word, value: 5}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -78,9 +87,9 @@ PropertiesList:
     CostTable: {type: :byte, value: 5}
     CostValue: {type: :word, value: 7}
     Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 20}
-    Subtype: {type: :word, value: 10}
+    Subtype: {type: :word, value: 6}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -89,15 +98,6 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 37}
-    Subtype: {type: :word, value: 7}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 22}
-    CostValue: {type: :word, value: 4}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 24}
     Subtype: {type: :word, value: 7}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
@@ -119,5 +119,5 @@ PropertiesList:
     Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_IT_CREITEMDRNRE}
-TemplateResRef: {type: :resref, value: it_creitemdrnre}
+Tag: {type: :cexostr, value: NW_IT_CREITEMDGR}
+TemplateResRef: {type: :resref, value: it_creitemdgr}
