--- a/mod/uti/it_creitemdre.uti.yml
+++ b/mod/uti/it_creitemdre.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1474560}
+Cost: {type: :dword, value: 1115560}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -20,7 +20,7 @@ LocalizedName:
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: Alter Blauer Drache, Eigenschaften
+    0: Alter Roter Drache, Eigenschaften
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
@@ -53,7 +53,7 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 1}
+    Subtype: {type: :word, value: 24}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -62,7 +62,7 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 16}
+    Subtype: {type: :word, value: 12}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -78,9 +78,9 @@ PropertiesList:
     CostTable: {type: :byte, value: 5}
     CostValue: {type: :word, value: 7}
     Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
+    Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 20}
-    Subtype: {type: :word, value: 9}
+    Subtype: {type: :word, value: 10}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -89,6 +89,15 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 37}
+    Subtype: {type: :word, value: 7}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 22}
+    CostValue: {type: :word, value: 4}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 255}
+    PropertyName: {type: :word, value: 24}
     Subtype: {type: :word, value: 7}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
@@ -103,12 +112,12 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 11}
-    CostValue: {type: :word, value: 9}
+    CostValue: {type: :word, value: 5}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 39}
     Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_IT_CREITEMDRNBL}
-TemplateResRef: {type: :resref, value: it_creitemdrnbl}
+Tag: {type: :cexostr, value: NW_IT_CREITEMDRE}
+TemplateResRef: {type: :resref, value: it_creitemdre}
