--- a/mod/uti/it_creitemdbl.uti.yml
+++ b/mod/uti/it_creitemdbl.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1648359}
+Cost: {type: :dword, value: 1474560}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -20,22 +20,13 @@ LocalizedName:
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: "Alter Gr\xFCner Drache, Eigenschaften"
+    0: Alter Blauer Drache, Eigenschaften
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 12}
-    Subtype: {type: :word, value: 33}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -58,11 +49,11 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 25}
-    CostValue: {type: :word, value: 15}
+    CostValue: {type: :word, value: 10}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 8}
+    Subtype: {type: :word, value: 1}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -71,7 +62,7 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
-    Subtype: {type: :word, value: 5}
+    Subtype: {type: :word, value: 16}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -89,7 +80,7 @@ PropertiesList:
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 20}
-    Subtype: {type: :word, value: 6}
+    Subtype: {type: :word, value: 9}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -112,12 +103,12 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 11}
-    CostValue: {type: :word, value: 5}
+    CostValue: {type: :word, value: 9}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 39}
     Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_IT_CREITEMDRNGR}
-TemplateResRef: {type: :resref, value: it_creitemdrngr}
+Tag: {type: :cexostr, value: NW_IT_CREITEMDBL}
+TemplateResRef: {type: :resref, value: it_creitemdbl}
