Wildnis Timryll: remove arcane lock

--- a/mod/area/wildnis_timrryl.git.yml
+++ b/mod/area/wildnis_timrryl.git.yml
@@ -82,12 +82,7 @@ Door List:
     TrapType: {type: :byte, value: 0}
     VarTable: 
       type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Name: {type: :cexostr, value: arcane_lock}
-        Type: {type: :dword, value: 1}
-        Value: {type: :int, value: 1047}
+      value: []
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 25.0}
     Y: {type: :float, value: 5.76}
