Gabel Zentrum, West: tighten up street
refs #361

--- a/mod/area/gabel_west.git.yml
+++ b/mod/area/gabel_west.git.yml
@@ -3290,7 +3290,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 50}
@@ -3909,7 +3909,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -4635,6 +4635,67 @@ Door List:
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 56.1}
     Y: {type: :float, value: 96.0}
+    Z: {type: :float, value: 0.2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -3.1416}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    GenericType_New: {type: :dword, value: 0}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: xyz}
+    KeyRequired: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: ""}
+    LinkedToFlags: {type: :byte, value: 0}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: "Haust\xFCr (unbreakable)"
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 1}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
+    PortraitId: {type: :word, value: 558}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: Haustrunbreakable}
+    TemplateResRef: {type: :resref, value: door_unbreak}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 97.0}
+    Y: {type: :float, value: 25.5}
     Z: {type: :float, value: 0.2}
 Encounter List: 
   type: :list
@@ -5408,7 +5469,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 67}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -6111,7 +6172,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 139}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7405,7 +7466,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1344}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -21397,7 +21458,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 73}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: -2.1598}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -21454,9 +21515,9 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 98.7486}
-    Y: {type: :float, value: 16.7644}
-    Z: {type: :float, value: 0.2083}
+    X: {type: :float, value: 94.0684}
+    Y: {type: :float, value: 25.7606}
+    Z: {type: :float, value: 0.2}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -22958,68 +23019,6 @@ TriggerList:
         PointZ: {type: :float, value: 0.025000000372529}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 2.04909992218018}
-        PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 2.04909992218018}
-        PointY: {type: :float, value: 12.3678998947144}
-        PointZ: {type: :float, value: 0.025000000372529}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.219600006937981}
-        PointY: {type: :float, value: 12.3678998947144}
-        PointZ: {type: :float, value: 0.025000000372529}
-    HighlightHeight: {type: :float, value: 0.0}
-    KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_gabel_z_2_gabel_w_1}
-    LinkedToFlags: {type: :byte, value: 2}
-    LoadScreenID: {type: :word, value: 0}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14760
-      value: {}
-
-    OnClick: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    PortraitId: {type: :word, value: 0}
-    ScriptHeartbeat: {type: :resref, value: ""}
-    ScriptOnEnter: {type: :resref, value: ""}
-    ScriptOnExit: {type: :resref, value: ""}
-    ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: gabel_w_2_gabel_z_1}
-    TemplateResRef: {type: :resref, value: newtransition}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :int, value: 1}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 97.749}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 18.4254}
-    ZOrientation: {type: :float, value: 0.0}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    AutoRemoveKey: {type: :byte, value: 0}
-    Cursor: {type: :byte, value: 1}
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
         PointX: {type: :float, value: 14.2706003189087}
         PointY: {type: :float, value: 0.0732000023126602}
         PointZ: {type: :float, value: 0.025000000372529}
@@ -23323,6 +23322,68 @@ TriggerList:
     YPosition: {type: :float, value: 0.0194}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -2.47278594970703}
+        PointY: {type: :float, value: -7.33633232116699}
+        PointZ: {type: :float, value: 0.224999889731407}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -0.08685302734375}
+        PointY: {type: :float, value: -7.28876876831055}
+        PointZ: {type: :float, value: 0.225000068545341}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.225000068545341}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -2.32546997070312}
+        PointY: {type: :float, value: -0.0297317504882812}
+        PointZ: {type: :float, value: 0.224999949336052}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_gabel_z_2_gabel_w_1}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
+
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: gabel_w_2_gabel_z_1}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 99.728}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 33.8567}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 VarTable: 
   type: :list
   value: 
@@ -23620,9 +23681,9 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_gabel_w_2_gabel_z_1}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: -0.9997}
-    XPosition: {type: :float, value: 97.8954}
+    XPosition: {type: :float, value: 97.4911}
     YOrientation: {type: :float, value: 0.0245}
-    YPosition: {type: :float, value: 24.5361}
+    YPosition: {type: :float, value: 30.1287}
     ZPosition: {type: :float, value: -0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
