Blutgarde: Turm benennen
refs #252

--- a/mod/area/gabel_bib_og.are.yml
+++ b/mod/area/gabel_bib_og.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Leerstehender Turm (1.OG)
+    0: An der Gabel - Turm der Blutgarde - OG
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
