module.ifo: ctp_dwarf_halls

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -75,6 +75,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: wrm_fantasyint}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: wrm_seasonalv10}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_genericdoors}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_dwarf_hall}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_brick_int}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_elf_interior}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: lisas_3rd_cloaks}}
